# debug

./: CLAUDE.md  README.md
bmi088/: README.md  detect.py  device.py  imu.py  intro.md  probe.py  pyproject.toml  stream.py
damiao/: .gitignore  README.md  detect.py  device.py  enable.py  fw_update.py  main.py  mit.py  multi_motor.py  params.py  pyproject.toml  servo.py  setup.sh
damiao/gs_usb_mod/: .gitignore  Makefile  README.md  SOURCE  build.sh
damiao/tests/: test_motor.py  test_protocol.py  test_safety.py
docs/superpowers/plans/: 2026-04-17-damiao-motor.md
docs/superpowers/specs/: 2026-04-17-damiao-motor-design.md
ina228/: README.md  detect.py  device.py  intro.md  main.py  pyproject.toml  read.py  soc.py  stream.py
realsense/: .gitignore  README.md  align.py  capture.py  detect.py  device.py  fw_update.py  imu.py  main.py  pointcloud.py  pyproject.toml  stream.py
realsense/scripts/: build_pyrealsense2.sh
respeaker/: .gitignore  README.md  aec_test.py  detect.py  device.py  doa.py  main.py  noise_test.py  play.py  pyproject.toml  record.py  vad.py
