[project]
name = "damiao"
version = "0.1.0"
description = "达妙电机 DM4310-P / DM4340 调试工具 (CAN via Makerbase CANable 2.0)"
requires-python = ">=3.10,<3.13"
dependencies = [
    "python-can>=4.4",
    "numpy>=1.26",
    "matplotlib>=3.8",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
